Allow to name the DataModel Class & Subject

--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-datamodel/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-datamodel/pom.xml
@@ -80,7 +80,7 @@
                         <!--<param>${schemaregistry.url}</param>-->
                     <!--</schemaRegistryUrls>-->
                     <!--<subjects>-->
-                        <!--<${artifactId}-sample>src/main/avro/Sample.avsc</${artifactId}-sample>-->
+                        <!--<${DatamodelClassName}>src/main/avro/Sample.avsc</${DatamodelClassName}>-->
                     <!--</subjects>-->
                 <!--</configuration>-->
                 <!--<goals>-->
