--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -22,22 +22,22 @@
         </dependency>
 
         <!--===========================-->
+        <!-- UNCOMMENT FOR Schema Registry -->
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-avro-serializer</artifactId>
+        </dependency>
+        <!--===========================-->
         <!-- UNCOMMENT FOR Java client -->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.kafka</groupId>-->
-            <!--<artifactId>kafka-clients</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+        </dependency>
         <!--===========================-->
         <!-- UNCOMMENT FOR Scala client-->
         <!--<dependency>-->
             <!--<groupId>org.apache.kafka</groupId>-->
             <!--<artifactId>kafka_2.12</artifactId>-->
-        <!--</dependency>-->
-        <!--===========================-->
-        <!-- UNCOMMENT FOR Schema Registry -->
-        <!--<dependency>-->
-        <!--<groupId>io.confluent</groupId>-->
-        <!--<artifactId>kafka-avro-serializer</artifactId>-->
         <!--</dependency>-->
         <!--===========================-->
 
