--- a/archetype/kafka-project/pom.xml
+++ b/archetype/kafka-project/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.frtu.archetype</groupId>
     <artifactId>kafka-project-archetype</artifactId>
-	<version>0.3.1-SNAPSHOT</version>
+	<version>0.3.1</version>
     <packaging>jar</packaging>
 
 	<name>Avro and Kafka project archetype</name>
@@ -27,7 +27,7 @@
 		<connection>scm:git:git@github.com:frtu/governance-toolbox.git</connection>
 		<developerConnection>scm:git:git@github.com:frtu/governance-toolbox.git</developerConnection>
 		<url>https://github.com/frtu/governance-toolbox/tree/master</url>
-		<tag>HEAD</tag>
+		<tag>v0.3.1</tag>
 	</scm>
 
     <distributionManagement>
