--- a/archetype/base-pom/pom.xml
+++ b/archetype/base-pom/pom.xml
@@ -27,9 +27,14 @@
 
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <commons-io.version>2.4</commons-io.version>
+        <!-- https://nvd.nist.gov/vuln/detail/CVE-2018-11771 -->
+        <commons-compress.version>1.18</commons-compress.version>
 
         <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-7489-->
         <jackson.version>2.8.11.1</jackson.version>
+        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-11040 -->
+        <!-- FIX https://nvd.nist.gov/vuln/detail/CVE-2018-11039 -->
+        <spring.version>4.3.18</spring.version>
     </properties>
 
     <dependencyManagement>
@@ -45,11 +50,28 @@
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
+            </dependency>
+
             <!--JSON Library-->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <!-- Spring -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-core</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
             </dependency>
 
             <!-- Logs -->
