Allow to generate Spark Archetype

--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -13,6 +13,7 @@
 	<modules>
 		<module>base-pom</module>
 		<module>kafka-project</module>
+		<module>spark-project</module>
 	</modules>
 
 	<licenses>
