--- a/archetype/spark-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/spark-project/src/main/resources/archetype-resources/pom.xml
@@ -34,6 +34,16 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <!--KAFKA-->
