Create a standalone avro project archetype

--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -12,6 +12,7 @@
 
 	<modules>
 		<module>base-pom</module>
+		<module>avro-project</module>
 		<module>kafka-project</module>
 		<module>spark-project</module>
 	</modules>
