--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -14,12 +14,12 @@
     </properties>
 
     <dependencies>
-        <!-- Internal domain dependencies -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>${artifactId}-datamodel</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+        <!-- UNCOMMENT for Internal domain dependencies -->
+        <!--<dependency>-->
+        <!--<groupId>${project.groupId}</groupId>-->
+        <!--<artifactId>${artifactId}-datamodel</artifactId>-->
+        <!--<version>${project.version}</version>-->
+        <!--</dependency>-->
 
         <!--===========================-->
         <!-- UNCOMMENT FOR Schema Registry -->
