--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -13,7 +13,7 @@
 	<modules>
 		<module>base-pom</module>
 		<module>avro-project</module>
-		<module>kafka-project</module>
+		<module>plt-kafka-project</module>
 		<module>spark-project</module>
 	</modules>
 
