--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -14,7 +14,7 @@
 		<module>base-pom</module>
 		<module>avro-project</module>
 		<module>plt-kafka-project</module>
-		<module>spark-project</module>
+		<module>plt-spark-project</module>
 	</modules>
 
 	<licenses>
