--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -14,6 +14,14 @@
     </properties>
 
     <dependencies>
+        <!-- UNCOMMENT for Internal domain dependencies -->
+        <!--<dependency>-->
+            <!--<groupId>${project.groupId}</groupId>-->
+            <!--<artifactId>${artifactId}-datamodel</artifactId>-->
+            <!--<version>${project.version}</version>-->
+        <!--</dependency>-->
+
+        <!--Libraries-->
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
