--- a/archetype/avro-project/pom.xml
+++ b/archetype/avro-project/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.frtu.archetype</groupId>
 		<artifactId>archetype-pom</artifactId>
-		<version>0.3.2</version>
+		<version>0.3.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
