--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.3</version>
 				<configuration>
-					<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+					<!--<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>-->
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 					<releaseProfiles>release-sign-artifacts</releaseProfiles>
 					<preparationGoals>clean verify gpg:sign</preparationGoals>
@@ -123,7 +123,7 @@
 						<version>1.6</version>
 						<configuration>
 							<useAgent>true</useAgent>
-							<passphrase>${gpg.passphrase}</passphrase>
+							<!--<passphrase>${gpg.passphrase}</passphrase>-->
 						</configuration>
 						<executions>
 							<execution>
