--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,8 @@
 					<configuration>
 						<mavenExecutorId>forked-path</mavenExecutorId>
 						<useReleaseProfile>false</useReleaseProfile>
-						<arguments>${arguments} -Psonatype-oss-release</arguments>
+						<!--<arguments>${arguments} -Psonatype-oss-release</arguments>-->
+						<arguments>-Psonatype-oss-release</arguments>
 					</configuration>
 				</plugin>
 			</plugins>
