--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.github.frtu.archetype</groupId>
 	<artifactId>archetype-pom</artifactId>
-	<version>0.3.3-SNAPSHOT</version>
+	<version>0.3.3</version>
 	<packaging>pom</packaging>
 
 	<name>Archetypes parent pom</name>
@@ -34,7 +34,7 @@
 		<connection>scm:git:git@github.com:frtu/governance-toolbox.git</connection>
 		<developerConnection>scm:git:git@github.com:frtu/governance-toolbox.git</developerConnection>
 		<url>https://github.com/frtu/governance-toolbox/tree/master</url>
-		<tag>HEAD</tag>
+		<tag>v0.3.3</tag>
 	</scm>
 
 	<distributionManagement>
