[FORMAT CODE] Nothing interesting here

--- a/archetype/plt-kafka-project/pom.xml
+++ b/archetype/plt-kafka-project/pom.xml
@@ -1,15 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>com.github.frtu.archetype</groupId>
-		<artifactId>archetype-pom</artifactId>
-		<version>0.3.4-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
+    <parent>
+        <groupId>com.github.frtu.archetype</groupId>
+        <artifactId>archetype-pom</artifactId>
+        <version>0.3.4-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <artifactId>plt-kafka-project-archetype</artifactId>
     <packaging>jar</packaging>
 
-	<name>Kafka Platform project archetype</name>
-	<description>Kafka Platform project archetype</description>
+    <name>Kafka Platform project archetype</name>
+    <description>Kafka Platform project archetype</description>
 </project>
