--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 	<modules>
 		<module>archetype</module>
 		<module>maven-plugins</module>
+		<module>samples/schema-maven-usage</module>
 	</modules>
 
 	<licenses>
