--- a/schema-registries/schema-registries-maven-plugin/pom.xml
+++ b/schema-registries/schema-registries-maven-plugin/pom.xml
@@ -2,9 +2,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.github.frtu.governance</groupId>
-		<artifactId>maven-plugin-parent-pom</artifactId>
-		<version>0.3.5-SNAPSHOT</version>
-		<relativePath>../../maven-plugins/pom.xml</relativePath>
+		<artifactId>schema-registries-toolbox-pom</artifactId>
+		<version>0.3.4-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>schema-registries-maven-plugin</artifactId>
