--- a/samples/schema-maven-usage/pom.xml
+++ b/samples/schema-maven-usage/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.github.frtu.governance</groupId>
         <artifactId>master-pom</artifactId>
-        <version>0.3.4-SNAPSHOT</version>
+        <version>0.3.4</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
