Open more port for connection into ZK Fix port and apply tips from https://rmoff.net/2018/08/02/kafka-listeners-explained/ and apply internal 9093 external 9092

--- a/schema-registries/docker/confluentinc-schema-registry/docker-compose.yml
+++ b/schema-registries/docker/confluentinc-schema-registry/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     hostname: zookeeper
     ports:
       - "2181:2181"
+#      - "38000-39900:38000-39900"
+      - "51100-51500:51100-51500"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -25,18 +27,20 @@ services:
       zookeeper: { condition: service_healthy }
     ports:
       - "9092:9092"
+      - "9093:9093"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      # Attention register domain 'broker' in /etc/hosts with 'inst_dns'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:9092'
+      # Based on https://rmoff.net/2018/08/02/kafka-listeners-explained/
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9093, EXTERNAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       # Comment for manual creation
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
-      KAFKA_BROKER_ID: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
 #      KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
-#      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:9092
+#      CONFLUENT_METRICS_REPORTER_BOOTSTRAP_SERVERS: broker:9093
 #      CONFLUENT_METRICS_REPORTER_ZOOKEEPER_CONNECT: zookeeper:2181
 #      CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
 #      CONFLUENT_METRICS_ENABLE: 'true'
@@ -55,7 +59,6 @@ services:
     ports:
       - "8081:8081"
     environment:
-      # Attention register domain 'zookeeper' in /etc/hosts with 'inst_dns'
       SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL: 'zookeeper:2181'
       SCHEMA_REGISTRY_HOST_NAME: schema_registry
       SCHEMA_REGISTRY_LISTENERS: 'http://0.0.0.0:8081'
@@ -69,7 +72,6 @@ services:
    environment:
       PORT: 8001
       PROXY: 'true'
-      # Attention register domain 'schema_registry' in /etc/hosts with 'inst_dns'
       SCHEMAREGISTRY_URL: 'http://schema_registry:8081'
       ALLOW_GLOBAL: 1
 #      ALLOW_TRANSITIVE: 1
@@ -91,12 +93,10 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_REST_HOST_NAME: 'kafka_rest'
-      # Attention register domain 'zookeeper' in /etc/hosts with 'inst_dns'
       KAFKA_REST_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      # Attention register domain 'schema_registry' in /etc/hosts with 'inst_dns'
       KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema_registry:8081'
       KAFKA_REST_LISTENERS: 'http://0.0.0.0:8082'
-#      KAFKA_REST_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9092
+      KAFKA_REST_BOOTSTRAP_SERVERS: PLAINTEXT://broker:9093
       KAFKA_REST_CONSUMER_REQUEST_TIMEOUT_MS: 30000
       KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS: 'GET,POST,PUT,DELETE,OPTIONS'
       KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGN: '*'
@@ -120,6 +120,5 @@ services:
       PORT: 8002
       PROXY_SKIP_VERIFY: 'true'
       PROXY: 'true'
-      # Attention register domain 'kafka_rest' in /etc/hosts with 'inst_dns'
       KAFKA_REST_PROXY_URL: 'http://kafka_rest:8082'
-#      SCHEMAREGISTRY_UI_URL: http://schema_registry:8081
+      SCHEMAREGISTRY_UI_URL: http://schema_registry:8081
