--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -30,6 +30,15 @@
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_${scala.version}</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_${scala.version}</artifactId>
+        </dependency>
+        <!--UNCOMMNENT FOR spark.sql.catalogImplementation=hive -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.spark</groupId>-->
+            <!--<artifactId>spark-hive_${scala.version}</artifactId>-->
+        <!--</dependency>-->
 
         <!--===========================-->
         <!-- UNCOMMENT to use Jackson for Scala-->
