--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -98,6 +98,7 @@
                 </executions>
                 <configuration>
                     <mainClass>${start-class}</mainClass>
+                    <skip>false</skip>
                     <arguments>
                         <!--<argument>foo</argument>-->
                     </arguments>
