--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
@@ -148,6 +148,22 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>skipSoNotNeeded</mainClass>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
