--- a/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-spark-project/src/main/resources/archetype-resources/pom.xml
@@ -98,6 +98,8 @@
                 <artifactId>spark-repl_${scala.version}</artifactId>
                 <version>${spark.version}</version>
             </dependency>
+
+            <!-- HIVE -->
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-hive_${scala.version}</artifactId>
@@ -106,6 +108,17 @@
             <dependency>
                 <groupId>org.apache.spark</groupId>
                 <artifactId>spark-hive-thriftserver_${scala.version}</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
+            <!-- Streaming -->
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming_${scala.version}</artifactId>
+                <version>${spark.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.spark</groupId>
+                <artifactId>spark-streaming-kafka-0-10_${scala.version}</artifactId>
                 <version>${spark.version}</version>
             </dependency>
 
