--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
 	<groupId>com.github.frtu.governance</groupId>
 	<artifactId>master-pom</artifactId>
-	<version>0.3.5-SNAPSHOT</version>
+	<version>0.3.5</version>
 	<packaging>pom</packaging>
 
 	<name>Governance toolbox</name>
@@ -40,7 +40,7 @@
 		<connection>scm:git:git@github.com:frtu/governance-toolbox.git</connection>
 		<developerConnection>scm:git:git@github.com:frtu/governance-toolbox.git</developerConnection>
 		<url>https://github.com/frtu/governance-toolbox/tree/master</url>
-		<tag>HEAD</tag>
+		<tag>v0.3.5</tag>
 	</scm>
 
 	<distributionManagement>
