Add serdes library

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
 	<modules>
 		<module>archetype</module>
+		<module>libraries</module>
 		<module>maven-plugins</module>
 		<module>samples/schema-maven-usage</module>
 	</modules>
