--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -20,6 +20,9 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!--===========================-->
+        <avro.version>1.8.2</avro.version>
+        <!--===========================-->
     </properties>
     <dependencyManagement>
         <dependencies>
