--- a/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/plt-kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -37,6 +37,9 @@
         <!--<jackson.version>2.8.11.1</jackson.version>-->
         <kafka.version>2.0.0</kafka.version>
 
+        <!--See https://docs.spring.io/spring-kafka/reference/htmlsingle/#_introduction_2-->
+        <spring-kafka.version>2.2.3.RELEASE</spring-kafka.version>
+
         <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
         <confluent.version>5.0.0</confluent.version>
@@ -109,6 +112,13 @@
                         <groupId>log4j</groupId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <!-- Spring Kafka -->
+            <dependency>
+                <groupId>org.springframework.kafka</groupId>
+                <artifactId>spring-kafka</artifactId>
+                <version>${spring-kafka.version}</version>
             </dependency>
 
             <!-- Internal domain dependencies -->
