[MINOR] Fill the missing constructor SpecificRecordDeserializer(T similarRecord, boolean isFormatJson) Tune log

--- a/libraries/library-serdes/pom.xml
+++ b/libraries/library-serdes/pom.xml
@@ -21,18 +21,17 @@
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
+
+        <!--Test -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!--Test fwk-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
