Add kafka serdes implementation

--- a/libraries/pom.xml
+++ b/libraries/pom.xml
@@ -16,6 +16,7 @@
 
     <modules>
         <module>library-serdes</module>
+        <module>library-kafka</module>
     </modules>
 
     <properties>
