[TEST] Fix test generation issue

--- a/libraries/library-kafka/pom.xml
+++ b/libraries/library-kafka/pom.xml
@@ -81,7 +81,7 @@
                             <goal>schema</goal>
                         </goals>
                         <configuration>
-                            <sourceDirectory>${project.basedir}/src/test/resources/</sourceDirectory>
+                            <sourceDirectory>${project.basedir}/src/test/avro/</sourceDirectory>
                             <!--<outputDirectory>${basedir}/target/generated-test-sources/</outputDirectory>-->
                         </configuration>
                     </execution>
